# mirall

./: README.md
src/: CMakeLists.txt  smbtest.cpp
src/mirall/: application.cpp  application.h  folderwatcher.h  inotify.cpp  inotify.h  smbclient.cpp  smbclient.h
test/: testfolderwatcher.cpp  testunisonfolder.cpp
